# GrokLLM

./: README.md
grok-built-llm/: API.md  ARCHITECTURE.md  CHALLENGE.md  DESCRIPTION.md  EXAMPLES.md  LICENSE  README.md  USAGE.md  app.py  pyproject.toml  requirements.txt  train.py
grok-built-llm/grokllm/: __init__.py  cli.py  config.py  data.py  generate.py  model.py  tokenizer.py  train.py  web.py
grok-built-llm/grokllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
grok-built-llm/web/: index.html
